--- a/TWIB1/static/contact.css
+++ b/TWIB1/static/contact.css
@@ -405,14 +405,22 @@ html {
     justify-content: space-around;
     align-items: center;
   }
+
+  .leftconcontainer{
+    flex-basis: 60%;
+    max-width: 300px;
+  }
   
   .leftconcontainer img{
     width:221px;
+    mix-blend-mode: hard-light;
     margin-top:20px;
     margin-bottom: 20px;
   }
   
   .leftconcontainer form {
+    max-width: 100%;
+    min-width: 50px;
     display: grid;
     gap: 10px;
   }
@@ -424,6 +432,7 @@ html {
   .con-text,
   .con-email,
   .con-textarea {
+    min-width: 50px;
     width: 100%;
     padding: 10px;
     border-radius: 3px;
@@ -471,9 +480,14 @@ html {
   
   .rightconcontainer{
     display: flex;
+    flex-basis: 35%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+  .cont__image{
+    width: 100%;
+    height: 100%;
   }
   .rightconcontainer p{
     text-align: center;
@@ -508,7 +522,6 @@ html {
     align-items: center;
     justify-content: center;
     width: 55%;
-    height: 300px;
     margin-bottom: 50px;
   }
   
@@ -520,13 +533,30 @@ html {
   
   .about-content {
     font-size: 16px;
+    width: 100%;
+    max-height: 100%;
     font-family: Arial, Helvetica, sans-serif;
   }
-  
-  
+
+@media(max-width:1100px){
+  .about{
+    flex-direction: column;
+  }
+  .main-contactussec{
+    row-gap: 50px;
+  }
+  .sepborder{
+    display: none;
+  }
+}
+@media(max-width:780px){
+  .cont__image{
+    display: none;
+  }
+}
 
 
-  /*--------Footer---------*/
+/*--------Footer---------*/
 
 
   .footer-separator {
@@ -541,7 +571,11 @@ html {
     color: #000000;
     padding: 30px 0;
     font-size: 14px;
+    display: flex;
+    justify-content: center;
     text-align: center;
+    max-width:100%;
+    flex-direction: column;
   }
   
   .footer-content {
@@ -581,13 +615,9 @@ html {
   
   .footer-links {
     flex: 0 0 auto;
-    margin-left: 200px;
-    margin-top: 20px;
   }
   
   .footer-links a {
-    position: relative;
-    top: 30px;
     color: #000000;
     margin: 0 10px;
     text-decoration: none;
