--- a/TWIB1/static/s/style2.css
+++ b/TWIB1/static/s/style2.css
@@ -6,207 +6,34 @@ body {
   margin-top: 5px;
 }
 
-.main-navbar {
-  position: fixed;
-  top: 0;
+body{
+  background-color: #FBE8DE;
+}
+
+
+
+
+
+.landing__page{
+  margin-bottom: 15px;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
   flex-direction: column;
-  width: 100%;
-  height: 150px;
-  z-index: 10000;
-  background-color: white;
+  justify-content: space-evenly;
+  height: 7vh;
 }
 
-.header-main {
+.main__logo{
   display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-around;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.main-navbar.sticky1 {
-  background-color: white;
-  height: 100px;
-}
-
-.main-navbar.sticky1 .header-main {
-  position: relative;
-  top: 10px;
-}
-
-.main-navbar.sticky1 .navbar {
-  position: relative;
-}
-
-.main-navbar.sticky1 .line {
-  position: relative;
-}
-
-.logo {
-  width: 300px;
-}
-
-.middle-section {
-  max-width: 500px;
-  display: flex;
+  height: 300px;
+  justify-content:center;
   align-items: center;
 }
 
-.search-box {
-  border-radius: 3px;
-  border: 1px solid #ccc;
-  padding: 7px;
-  margin-right: 10px;
-  width: 250px;
-}
-
-
-.search-icon {
-  margin: 0;
-  height: 30px;
-  width: 30px;
-}
-
-nav ul li {
-  margin-left: 10px;
-  list-style-type: none;
-  display: inline;
-}
-
-nav ul li a {
-  color: gray;
-  font-family: 'Lato';
-  text-decoration: none;
-  font-size: 18px;
+.header__img {
   position: relative;
+  max-height: 90px;
+  max-width: 350px;
 }
-
-nav ul li a::after {
-  content: '';
-  width: 0;
-  height: 3px;
-  background: gray;
-  position: absolute;
-  left: 0;
-  bottom: -6px;
-  transition: 0.5s;
-}
-
-nav ul li a:hover::after {
-  width: 100%;
-}
-
-
-.navbar {
-  width: 100%;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto Condensed';
-  font-weight: 700;
-  font-size: larger;
-  transition: .5s;
-}
-
-/* Links inside the navbar */
-.navbar a {
-  float: left;
-  display: block;
-  font-size: 20px;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  color: #545454;
-}
-
-/* The dropdown container */
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: 20px;
-  border: none;
-  outline: none;
-  color: #545454;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  /* Important for vertical align on mobile phones */
-  margin: 0%;
-  /* Important for vertical align on mobile phones */
-}
-
-/* Add a red background color to navbar links on hover */
-.navbar a:hover,
-.dropdown:hover .dropbtn {
-  background-color: lightgray;
-}
-
-.whatsnew:hover {
-  color: #fd6700;
-  letter-spacing: .1em;
-}
-
-.whatsnew span {
-  position: absolute;
-  display: block;
-  background: #fd7700;
-}
-
-.whatsnew span:nth-child(1) {
-  left: 0;
-  top: 0;
-  width: 50.5%;
-  height: 1.5px;
-  transform: scaleX(0);
-  transition: transform .5s;
-}
-
-.whatsnew:hover span:nth-child(1) {
-  transform: scaleX(1);
-}
-
-/* Dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: #333;
-  float: none;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-
-
-
 
 
 
@@ -374,6 +201,7 @@ nav ul li a:hover::after {
 .flex-item {
   position: relative;
   display: inline-block;
+  background-color: #FBE8DE;
 }
 
 .flex-item:hover{
@@ -445,15 +273,6 @@ nav ul li a:hover::after {
   padding-left: 130px;
 }
 
-.flex-item {
-  width: 350px;
-  height: 530px;
-  background-color: #f2f2f2;
-  border: 1px solid #ccc;
-  margin: 20px;
-  padding: 20px;
-  box-sizing: border-box;
-}
 
 .flex-item:hover {
   transform: scale(1.1);
@@ -497,7 +316,7 @@ nav ul li a:hover::after {
 }
 
 .guides {
-  margin-top: 170px;
+  margin-top: 40px;
   text-align: center;
 }
 
@@ -505,19 +324,28 @@ nav ul li a:hover::after {
   font-family: "Oswald",sans-serif;
   letter-spacing: 5px;
   font-size: 45px;
+  position: relative;
+}
+.guides-header:before {
+  content: "";
+  border-bottom: 2px solid black;
+  width: 17%;
+  height: 10px;
+  position: absolute;
+  bottom: 0;
 }
 
 .guides-body {
   position: relative;
   display: flex;
-  width:40%;
+  width:60%;
   text-align: center;
   align-items: center;
   justify-content: center;
   letter-spacing: -0.15px;
   line-height: 1.5em;
   margin: 0 auto;
-  margin-top: -30px;
+  margin-top: -15px;
   font-size: 16px;
   font-family: Helvetica Neue,sans-serif;
 }
@@ -527,7 +355,21 @@ nav ul li a:hover::after {
   display:grid;
   grid-template-columns:330px 330px 330px;
   column-gap:10px;
-  padding-left:215px;
+  justify-content: center;
+}
+
+@media( max-width: 1007px)
+{
+  .guide-container{
+    grid-template-columns: 330px 330px;
+  }
+}
+
+@media (max-width: 675px)
+{
+  .guide-container{
+    grid-template-columns: 330px;
+  }
 }
 
 h1{
@@ -538,16 +380,15 @@ hr{
   margin-top:50px;
   margin-bottom:25px;
   width: 65%;
-  margin-right:150px;
-  margin-left:270px;
-  
+  display: flex;
+  justify-content: center;
 }
 
 .flex-item{
   height:325px;
   padding-top: 0px;
   padding-bottom:0px;
-  background-color:white;
+  margin-bottom: 60px;
   border:none;
   text-align: center;
 }
@@ -931,96 +772,100 @@ select {
 
 
 
-.footer-separator {
-  border: none;
-  border-top: 1px solid #ccc;
-  margin: 30px 0;
-}
+/*--------Footer---------*/
 
 
-footer {
-  background-color: #ffffff;
-  color: #000000;
-  padding: 30px 0;
-  font-size: 14px;
-  text-align: center;
-}
-
-.footer-content {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 1200px;
-  font-family:'Poppins';
-  margin: 0 auto;
-}
-
-.footer-text {
-  flex: 0 0 auto;
-  text-align: center;
-}
-.footer-text p{
-  font-weight: bold;
-  font-size: 26px;
-  letter-spacing: .02rem;
-  word-spacing: 0.06rem;
-}
-
-.footer-text h4{
-  position: relative;
-  bottom: 20px;
-  font-weight: 100;
-}
-
-.footer-logo {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 5px;
-  width: 50px;
-}
-
-.footer-links {
-  flex: 0 0 auto;
-  margin-left: 200px;
-  margin-top: 20px;
-}
-
-.footer-links a {
-  position: relative;
-  top: 30px;
-  color: #000000;
-  margin: 0 10px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.footer-links a:hover{
-  color: rgb(255, 166, 0);
-}
-
-.footer-disclaimer {
-  flex: 0 0 100%;
-  margin-top: 20px;
-  width: 85%;
-}
-
-.footer-disclaimer p {
-  margin: 0;
-}
-
-.footer-disclaimer a {
-  color: #1663b3;
-  text-decoration: none;
-}
-
-.footer-top{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin:  0 50px 0 50px;
-}
+  .footer-separator {
+    border: none;
+    border-top: 1px solid transparent;
+    margin: 30px 0;
+  }
+  
+  
+  footer {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 30px 0;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    max-width:100%;
+    flex-direction: column;
+  }
+  
+  .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    font-family:'Poppins';
+    margin: 0 auto;
+  }
+  
+  .footer-text {
+    flex: 0 0 auto;
+    text-align: center;
+  }
+  .footer-text p{
+    font-weight: bold;
+    font-size: 26px;
+    letter-spacing: .02rem;
+    word-spacing: 0.06rem;
+  }
+  
+  .footer-text h4{
+    position: relative;
+    bottom: 20px;
+    font-weight: 100;
+  }
+  
+  .footer-logo {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
+    width: 50px;
+  }
+  
+  .footer-links {
+    flex: 0 0 auto;
+  }
+  
+  .footer-links a {
+    color: #000000;
+    margin: 0 10px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  .footer-links a:hover{
+    color: rgb(255, 166, 0);
+  }
+  
+  .footer-disclaimer {
+    flex: 0 0 100%;
+    margin-top: 20px;
+    width: 85%;
+  }
+  
+  .footer-disclaimer p {
+    margin: 0;
+  }
+  
+  .footer-disclaimer a {
+    color: #1663b3;
+    text-decoration: none;
+  }
+  
+  .footer-top{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin:  0 50px 0 50px;
+  }
+  
 
 
 /*--------Login Page---------*/
@@ -1260,4 +1105,127 @@ h2 {
   text-decoration:none;
   color:#606060;
   font-size: 20px;
+}
+
+.search__drop {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Poppins';
+  font-weight: 500;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+}
+
+.drop__containers{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  /* float: left;
+  overflow: hidden;
+  z-index: 1;*/
+}
+
+.btn-5{
+  background-color: #262626;
+  color: white;
+  border-radius: 8px;
+  border: none;
+  padding: 8px;
+  margin-top: 5px;
+  font-family: 'Oswald';
+  transition: 1s;
+  cursor: pointer;
+}
+
+.btn-5:hover{
+  transform: translateY(-9px);
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 20px;
+  border: none;
+  outline: none;
+  color: #545454;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  /* Important for vertical align on mobile phones */
+  margin: 0 auto;
+  /* Important for vertical align on mobile phones */
+}
+
+@media (max-width:600px){
+  .dropdown {
+    font-size: 16px;
+  }
+}
+
+
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: lightgray;
+}
+
+.whatsnew:hover {
+  color: #fd6700;
+  letter-spacing: .1em;
+}
+
+.whatsnew span {
+  position: absolute;
+  display: block;
+  background: #fd7700;
+}
+
+.whatsnew span:nth-child(1) {
+  left: 0;
+  top: 0;
+  width: 50.5%;
+  height: 1.5px;
+  transform: scaleX(0);
+  transition: transform .5s;
+}
+
+.whatsnew:hover span:nth-child(1) {
+  transform: scaleX(1);
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #333;
+  float: none;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
