--- a/TWIB1/static/submit.css
+++ b/TWIB1/static/submit.css
@@ -193,7 +193,6 @@ body {
 }
 
 .subsection1{
-  margin-top: 170px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -345,3 +344,99 @@ body {
 .subsection5 button:hover{
   background-color: rgb(211, 138, 1);
 }
+
+
+/*--------Footer---------*/
+
+
+  .footer-separator {
+    border: none;
+    border-top: 1px solid transparent;
+    margin: 30px 0;
+  }
+  
+  
+  footer {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 30px 0;
+    font-size: 14px;
+    text-align: center;
+  }
+  
+  .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    font-family:'Poppins';
+    margin: 0 auto;
+  }
+  
+  .footer-text {
+    flex: 0 0 auto;
+    text-align: center;
+  }
+  .footer-text p{
+    font-weight: bold;
+    font-size: 26px;
+    letter-spacing: .02rem;
+    word-spacing: 0.06rem;
+  }
+  
+  .footer-text h4{
+    position: relative;
+    bottom: 20px;
+    font-weight: 100;
+  }
+  
+  .footer-logo {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
+    width: 50px;
+  }
+  
+  .footer-links {
+    flex: 0 0 auto;
+    margin-left: 200px;
+    margin-top: 20px;
+  }
+  
+  .footer-links a {
+    position: relative;
+    top: 30px;
+    color: #000000;
+    margin: 0 10px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  .footer-links a:hover{
+    color: rgb(255, 166, 0);
+  }
+  
+  .footer-disclaimer {
+    flex: 0 0 100%;
+    margin-top: 20px;
+    width: 85%;
+  }
+  
+  .footer-disclaimer p {
+    margin: 0;
+  }
+  
+  .footer-disclaimer a {
+    color: #1663b3;
+    text-decoration: none;
+  }
+  
+  .footer-top{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin:  0 50px 0 50px;
+  }
+  
