--- a/TWIB1/templates/index1.html
+++ b/TWIB1/templates/index1.html
@@ -4,29 +4,40 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <title>TIWIB</title>
-  <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'styles.css' %}" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Mynerve&family=Poppins:wght@100;500&family=Plus+Jakarta+Sans:wght@300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Mynerve&family=Poppins:wght@100;500&family=Plus+Jakarta+Sans:wght@300&family=Oswald:wght@500&display=swap"
     rel="stylesheet">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <div class="main__logo">
-    <img src="{% static 'images/ThisIsWhyI_mBroke-removebg-preview.png' %}" class="header__img"></img>
-  </div>
-  <img src="{% static 'images/61195ed506c73c67adaf0a3d_Group 44.svg' %}" class="main__images right__img" align="right">
-  <img src="{% static 'images/61195ef16ada8678daf3f267_Group 45.svg' %}" class="main__images left__img" align="left">
-  <div class="hero__sec">
-    <p class="para1">Unearth the extraordinary:</p>
-    <p class="para2">a curated collection of remarkable finds</p>
-    <div class="logreg__buttons">
-      <button class="button1 button" id="openLogin">Login</button>
-      <button class="button2 button" id="openPopup">Register</button>
-
+  <section class="landing__page">
+    <div class="main__logo">
+      <img src="{% static 'images/ThisIsWhyI_mBroke-removebg-preview.png' %}" class="header__img"></img>
     </div>
+    <img src="{% static 'images/61195ed506c73c67adaf0a3d_Group 44.svg' %}" class="main__images right__img" align="right">
+    <img src="{% static 'images/61195ef16ada8678daf3f267_Group 45.svg' %}" class="main__images left__img" align="left">
+    <div class="hero__sec">
+      <div clas="para">
+        <p class="para1">Unearth the extraordinary:</p>
+        <p class="para2">a curated collection of remarkable finds</p>
+      </div>
+        
+      <div class="logreg__buttons">
+        <button class="button1 button" id="openLogin">Login</button>
+        <button class="button2 button" id="openPopup">Register</button>
+      </div>
+       <p class="guaranteed">Products you’ll <img src="{% static 'images/61195da63e9b07d94bbaa046_heart (1).svg' %}"></img>,
+      guaranteed</p>
+  </section>
 
     <!--Login Content-->
     
@@ -35,8 +46,7 @@
         <form class="loginform" method="post" action="check">
           {% csrf_token %}
           <div class="login-container">
-            <img class="login-img" src="{static 'images/header-logo.png' %}">
-            <h3>Login Here</h3>
+            <img class="login-img" src="{% static 'images/ThisIsWhyI_mBroke-removebg-preview.png' %}">
           </div>     
           <div class="form-group">
             <label for="username">Username:</label>
@@ -70,7 +80,7 @@
     <div id="popupContainer">
       <div id="popupContent">
         <div class="modal-register">
-            <img class="small-logo-login" src="{static 'images/header-logo.png' %}" alt="ThisIsWhyImBroke Logo" />
+            <img class="small-logo-login" src="{% static 'images/ThisIsWhyI_mBroke-removebg-preview.png' %}" alt="ThisIsWhyImBroke Logo" />
             <h2>Join Us!</h2>
             <form action="register" method="post">
           {% csrf_token %}
@@ -101,15 +111,6 @@
                 value="CREATE ACCOUNT"
                 id="submit"
               /><br />
-              <p style="color: rgb(170, 170, 170); font-size: 11px">
-                By signing up you agree to our
-                <a
-                  class="grey-link-tos"
-                  href="/privacy-policy"
-                  style="text-decoration: underline"
-                  >Terms and Policies</a
-                >
-              </p>
               <a class="grey-link" ng-click="switchToLogin()"
                 >Already a member? Log in</a
               >
@@ -140,23 +141,57 @@
     });
     </script>
 
-    <p class="guaranteed">Products you’ll <img src="{% static 'images/61195da63e9b07d94bbaa046_heart (1).svg' %}"></img>,
-      guaranteed</p>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/django.js/0.8.1/django.min.js"></script>
-  <script src="script.js"></script>
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 
   <!--  CONTACT BUTTON --->
-  <a href="/contact.html" class="button-link">
-    Contact Us
-    <img class="msg-icon" src="../static/images/contact-msg.jpg">
-  </a>
-
+  
   <!--  Search Bar --->
-  <section class="search__drop">
+
+  <section class="hero__stories">
+    <div style="display:flex; flex-direction:column; place-items:center;">
+      <h1 style="font-family: 'Montserrat';font-weight:500;font-size:30px;margin-bottom:-20px;">Blogs</h1>
+      <h5 style="font-family: 'Montserrat';font-weight:300;font-size:20px;margin-bottom:20px;">For all your needs</h5>
+      <i class="fa fa-chevron-left prev"></i>
+      <i class="fa fa-chevron-right next"></i>
+    </div>
+    
+    <div class="cont__blog">
+      <div class="story__1 stories">
+        <img src="{% static 'images/lovedones.jpeg' %}"></img>
+        <a href="/women" style="text-decoration:none;"><h5>100 gifts for your loved ones</h5></a> 
+      </div>
+      <div class="story__2 stories">
+        <img src="{% static 'images/teenboys.webp' %}">
+        <a href="/teenboys" style="text-decoration:none;"><h5>30 gifts that all age will like</h5></a>
+      </div>
+      <div class="story__3 stories">
+        <img src="{% static 'images/graduation.jpg' %}"></img>
+        <a href="/graduation" style="text-decoration:none;"><h5>50 Gifts that you can give on graduation day</h5></a>
+      </div>
+      <div class="story__4 stories">
+        <img src="{% static 'images/mom.jpg' %}"></img>
+        <a href="/mothersday" style="text-decoration:none;"><h5 >100+ Gifts that can cheer your mom</h5></a>
+      </div>
+      <div class="story__5 stories">
+        <img src="{% static 'images/daughter.jpg' %}"></img>
+        <a href="/teengirls" style="text-decoration:none;"><h5>20 Gifts you can give to your daughter</h5></a>
+      </div>
+      <div class="story__ stories">
+        <img src="{% static 'images/sibilings.jpg' %}"></img>
+        <a href="/teengirls" style="text-decoration:none;"><h5>43 Sibling Bond Gifts: Unique Ways Brothers Delight Sisters</h5></a>
+      </div>
+    </div>
+
+    <div><a href="/allguides"><button style="padding:5px;border:none;border-radius:5px;background-color:black;color:white;">More Blogs</button></a></div>
+    
+  </section>
+
+  
+  <section class="search__drop" style="margin-top: 10px">
     <div class="search__container">
+      <!--
       <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
       <lord-icon 
         src="https://cdn.lordicon.com/etwtznjn.json"
@@ -165,6 +200,7 @@
         colors="primary:#121331,secondary:#08a88a"
         style="width:150px;height:150px" class="lord__icon">
       </lord-icon>
+      -->
       <form action="search" class="search-bar" method="post">
         {% csrf_token %}
         <input type="text" list='values' placeholder="search here" name="query" style="appearance:none;">
@@ -174,10 +210,16 @@
           {% endfor %}
         </datalist>
         <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
+      </form>                                                                                  
     </div>
 
+  
     <div class="drop__containers">
+
+      <!-- Need to change link for new button -->
+
+      <a href="#"><button class="btn-5">WHATS NEW</button></a>
+      
       <div class="dropdown" onmouseover="showRecipientOptions()" onmouseout="hideRecipientOptions()">
         <button class="dropbtn btn-1">GIFTS BY RECIPTENT
           <i class="fa fa-caret-down"></i>
@@ -214,12 +256,12 @@
 
 
       <div class="dropdown">
-        <button class="dropbtn">GIFTS BY CATEOGERY
+        <button class="dropbtn">TRENDING GIFTS
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="/funny">Funny</a>
-          <a href="/gaggifts">Gag Gifts</a>
+          <a href="/anime">Anime</a>
+          <a href="/starwars">Starwars</a>
           <a href="/geek">Geek</a>
           <a href="/gamers">Gamers</a>
           <a href="/food">Food</a>
@@ -227,52 +269,22 @@
           <a href="/movie">Movie</a>
         </div>
       </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">MORE CATEGORIES
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="/allgiftsguide">All Guides</a>
+          <a href="/contactus">Contact Us</a>
+          <a href="/submitaproduct">Submit a Product</a>
+        </div>
+      </div>
+      
     </div>
 
   </section>
-
-  <section class="hero__stories">
-    <h1 style="display: flex;place-items: center;font-family: 'Montserrat';font-weight:500;font-size:30px;margin-bottom:-20px;">Blogs</h1>
-    <h5 style="font-family: 'Montserrat';font-weight:300;font-size:20px;margin-bottom:20px;">For all your needs</h5>
-    <div class="cont__blog">
-      <div class="story__1 stories">
-        <img src="{% static 'images/image1.jpg' %}"></img>
-        <p class="hide__p">Behold, my favorite luscious dessert! This cheesecake recipe hails from the Basque region of
-          Spain—specifically, from a restaurant called La Viña.Honestly, I’m not sure why this cheesecake is called Basque
-          cheesecake over here. We should call it La Viña cheesecake or Santiago Rivera’s cheesecake.</p>
-        <h5>Foolproof Basque Cheesecake</h5>
-      </div>
-      <div class="story__2 stories">
-        <img src="{% static 'images/image4.jpg' %}">
-        <p class="hide__p">There is nothing like a mother’s love; dedicating just one day does not suffice for everything a mom does for
-          her kids because every day is Mother's Day, as her love is endless. The list of her selfless and unconditional
-          deeds is ongoing, which is why the day to celebrate her love and care should be exquisite.</p>
-        <h5>Fun Activities to Do on Mother's Day.</h5>
-      </div>
-      <div class="story__3 stories">
-        <img src="{% static 'images/image5.jpg' %}"></img>
-        <p class="hide__p">We are making our seeds available a few months earlier than usual because our shop manager Nikki is having a
-          baby! While we typically offer hardy annuals and sweet peas in the fall, we’re moving the sale date up to allow
-          plenty of time to get everyone’s orders packed and safely out the door before her little one arrives.</p>
-        <h5>Seed Sale Questions Answered</h5>
-      </div>
-      <div class="story__4 stories">
-        <img src="{% static 'images/image6.jpg' %}"></img>
-        <p class="hide__p">A sinking, uncomfortable feeling that I know all too well. It is the same feeling that comes on Sunday evenings
-          as another week in the office beckons. The same feeling that comes when the long awaited annual two week holiday
-          is almost over. I remember the exact same feeling a few years ago.</p>
-        <h5>Nature is a teacher</h5>
-      </div>
-      <div class="story__5 stories">
-        <img src="{% static 'images/image6.jpg' %}"></img>
-        <p class="hide__p">A sinking, uncomfortable feeling that I know all too well. It is the same feeling that comes on Sunday evenings
-          as another week in the office beckons. The same feeling that comes when the long awaited annual two week holiday
-          is almost over. I remember the exact same feeling a few years ago.</p>
-        <h5>Nature is a teacher</h5>
-      </div>
-    </div>
-  </section>
-
+  <!--
   <section class="scroller">
     <div class="slide__track">
 
@@ -313,6 +325,8 @@
     </div>
   </section>
 
+  -->
+
   <section class="item__layout">
     {% for op in value %}
     <div class="flex-item">
@@ -329,20 +343,79 @@
      {% endfor %}
   </section>
 
-  <section class="success_story">
-    <div>
-      <img src="{% static 'images/6119d7a83723f6d0114590ab_quotation.svg' %}">
+  <footer>
+    <div class="footer-content">
+      <div class="footer-top">
+        <div class="footer-text">
+          <p>
+            <img src="https://www.thisiswhyimbroke.com/assets/images/cash-in-hand-logo-large.png" alt="This Is Why Im Broke logo" class="footer-logo">
+            THIS IS WHY IM BROKE
+          </p>
+          <h4>© 2023 ThisIsWhyImBroke. All rights reserved.</h4>
+          <div class="footer-links">
+            <a href="/contactus">Contact Us</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-disclaimer">
+        <p>
+          ThisIsWhyImBroke is reader supported, some products displayed may earn us a commission if you purchase through our links. ThisIsWhyImBroke is a participant in the Amazon Services LLC Associates Program.<a href=#>Learn more about how our site works.</a>
+        </p>
+      </div>
     </div>
-    <div>
-      <p>TIWIB helped my book become a #1 Best Seller on Amazon within a matter of hours. The revenue generated from visibility on the site was absolutely overwhelming.</p>
-    </div>
-    <div>
-      <p> John Kyle,</p>
-      <a href="/#">Grow The Fuck Up Book</a>
-    </div>
-    
-  </section>
+   </footer>
 
+  <!-- JQuery -->
+
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  
+  <!-- Slick JS -->
+  
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
+
+  <!-- For Carousel -->
+    
+  <script type="text/javascript">
+    $('.cont__blog').slick({
+      dots: true,
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 2000,
+      nextArrow: $('.next'),
+      prevArrow: $('.prev'),
+      responsive: [
+        {
+          breakpoint: 1124,
+          settings: {
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            infinite: true,
+            dots: true
+          }
+        },
+        {
+          breakpoint: 900,
+          settings: {
+            slidesToShow: 2,
+            slidesToScroll: 2
+          }
+        },
+        {
+          breakpoint: 480,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1
+          }
+        }
+        // You can unslick at a given breakpoint now by adding:
+        // settings: "unslick"
+        // instead of a settings object
+      ]
+    });      
+  </script>
+  
+  
 </body>
 
 </html>
