--- a/TWIB1/templates/submitprd.html
+++ b/TWIB1/templates/submitprd.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="main__logo">
-    <img src="{% static 'images/ThisIsWhyI_mBroke-removebg-preview.png" class="header__img"></img>
+    <a href="http://127.0.0.1:8000/"><img src="{% static 'images/ThisIsWhyI_mBroke-removebg-preview.png' %}" class="header__img"></a>
   </div>
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 
@@ -37,15 +37,15 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="men.html">Men</a>
-          <a href="women.html">Women</a>
-          <a href="dad/">Dad</a>
-          <a href="mom/">Mom</a>
-          <a href="kids/">Kids</a>
-          <a href="teenboys/">Teen Boys</a>
-          <a href="teengirls/">Teen Girls</a>
-          <a href="boyfriend/">Boyfriend</a>
-          <a href="girlfriend/">Girlfriend</a>
+          <a href="men">Men</a>
+          <a href="womenl">Women</a>
+          <a href="/dad">Dad</a>
+          <a href="/mom">Mom</a>
+          <a href="/kids">Kids</a>
+          <a href="/teenboys">Teen Boys</a>
+          <a href="/teengirls">Teen Girls</a>
+          <a href="/boyfriend">Boyfriend</a>
+          <a href="/girlfriend">Girlfriend</a>
         </div>
       </div>
 
@@ -55,14 +55,14 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="fathersday/">Father's Day</a>
-          <a href="mothersday/">Mother's Day</a>
-          <a href="valentinesday/">Valetines Day</a>
-          <a href="aniversary/">Anniversary</a>
-          <a href="birthdaygift/">Birthday Gifts</a>
-          <a href="graduation/">Graduation</a>
-          <a href="engagement/">Engagement</a>
-          <a href="wedding/">Wedding</a>
+          <a href="/fathersday">Father's Day</a>
+          <a href="/mothersday">Mother's Day</a>
+          <a href="/valentinesday">Valetines Day</a>
+          <a href="/aniversary">Anniversary</a>
+          <a href="/birthdaygift">Birthday Gifts</a>
+          <a href="/graduation">Graduation</a>
+          <a href="/engagement">Engagement</a>
+          <a href="/wedding">Wedding</a>
         </div>
       </div>
 
@@ -72,13 +72,13 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="funny/">Funny</a>
-          <a href="gaggifts/">Gag Gifts</a>
-          <a href="geek/">Geek</a>
-          <a href="gamers/">Gamers</a>
-          <a href="food/">Food</a>
-          <a href="travel/">Travel</a>
-          <a href="movie/">Movie</a>
+          <a href="/funny">Funny</a>
+          <a href="/gaggifts">Gag Gifts</a>
+          <a href="/geek">Geek</a>
+          <a href="/gamers">Gamers</a>
+          <a href="/food">Food</a>
+          <a href="/travel">Travel</a>
+          <a href="/movie">Movie</a>
         </div>
       </div>
 
@@ -88,10 +88,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="./guides.html">All Gift Guides</a>
-          <a href="gaggifts/">Random</a>
-          <a href="submitprd.html">Submit a product</a>
-          <a href="contact.html">Contact Us</a>
+          <a href="/allgiftsguide">All Guides</a>
+          <a href="/contactus">Contact Us</a>
+          <a href="/submitaproduct">Submit a Product</a>
         </div>
       </div>
     </div>
@@ -101,7 +100,7 @@
   <main>
     <div class="main-submitprd">
       <div class="subsection1">
-        <img src="{% static 'images/cash.jpg' %}">
+        <img src="https://www.thisiswhyimbroke.com/assets/images/cash-in-hand-logo-large.png">
         <h2>PITCH YOUR PRODUCT</h2>
         <p>We'll show it to our users for a short period - if your product's engagement with our readers is<br> at least equal to or above the average of all products listed, it will earn a permanent spot on our site</p>
         <button>GET STARTED</button>
@@ -111,17 +110,17 @@
         <div class="flexsubsect2">
           <div>
             <h3>Create Your Pitch</h3>
-            <img src="{% static 'images/screen.jpg' %}">
+            <img src="{% static 'images/screen.png' %}">
             <p>After creating your listing, your <br> product will be shown to 20,000 <br> of our verified unique users</p>
           </div>
           <div>
             <h3>Our Readers Engage</h3>
-            <img src="{% static 'images/network.jpg' %}">
+            <img src="{% static 'images/network.png' %}">
             <p>Unique clicks and wishlist saves are <br> measured and compared against <br> the average engagement performance of <br> all products currently listed</p>
           </div>
           <div>
             <h3>Performance Is Tracked</h3>
-            <img src="{% static 'images/gauge.jpg' %}">
+            <img src="{% static 'images/gauge.png' %}">
             <p>If your pitch performs at least equal <br> to or above the average, it will <br> be permanently listed, included in <br> gift guides, newsletters, and social media</p>
           </div>
         </div>
@@ -149,12 +148,12 @@
       <div class="subsection5">
         <h1 style="color: rgb(225, 147, 3);">The Boys</h1>
         <div class="suc suc1">
-          <img src="{% static 'images/images/image1.jpg' %}" x style="float: right;">
+          <img src="{% static 'images/image1.jpg' %}" x style="float: right;">
           <p></p>
           <p style=" padding-top: 50px;">Nishanth Janarthanan <a href="https://www.amazon.com/dp/1511720247/?tag=097-20" target="_blank" style="text-decoration: none;">Grow The Fuck and Shop</a></p>
         </div>
         <div class="suc suc2">
-          <img src="{% static 'images/images/image5.jpg' %}" style="float: right;">
+          <img src="{% static 'images/image5.jpg' %}" style="float: right;">
           <p>"This Is Why I'm Broke helped Drop Stop get noticed in a big way. The hits to our website and Amazon listing as well as accompanying sales were amazing! And what’s even more amazing, it kept on going for YEARS after the original post. Folks still tell us that's where they discovered our invention."</p>
           <p style=" padding-top: 30px;">Jeffrey Simon, <a href="https://www.buydropstop.com/" target="_blank" style="text-decoration: none;">Dropstop</a></p>
         </div>
@@ -171,6 +170,31 @@
         <button>GET STARTED</button>
       </div>
     </div>
+
+    <footer>
+      <div class="footer-content">
+        <div class="footer-top">
+          <div class="footer-text">
+            <p>
+              <img src="https://www.thisiswhyimbroke.com/assets/images/cash-in-hand-logo-large.png" alt="This Is Why Im Broke logo" class="footer-logo">
+              THIS IS WHY IM BROKE
+            </p>
+            <h4>© 2023 ThisIsWhyImBroke. All rights reserved.</h4>
+          </div>
+          <div class="footer-links">
+            <a href="#">Contact Us</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Affiliate Disclosure</a>
+            <a href="#">DMCA Policy</a>
+          </div>
+        </div>
+        <div class="footer-disclaimer">
+          <p>
+            ThisIsWhyImBroke is reader supported, some products displayed may earn us a commission if you purchase through our links. ThisIsWhyImBroke is a participant in the Amazon Services LLC Associates Program.<a href=#>Learn more about how our site works.</a>
+          </p>
+        </div>
+      </div>
+     </footer>
   </main>
 
   
